# dictionary-client

./: README.md  dictionary.cabal
app/: Main.hs
