cabal-version:      2.4
name:               dictionary
version:            0.1.0.0
author:             Samuel Schlesinger
maintainer:         samuel@simspace.com
extra-source-files: CHANGELOG.md

executable dictionary
    main-is:          Main.hs
    build-depends:
      base >=4.4 && <5,
      servant ^>=0.18,
      servant-client ^>=0.18,
      aeson ^>=1.5.6.0,
      text ^>=1.2.4.1,
      commander-cli ^>=0.10.2.0,
      http-client ^>=0.7.8,
      http-client-tls ^>=0.3.5.3,
      http-types ^>=0.12.3
    hs-source-dirs:   app
    default-language: Haskell2010
